--- a/lab2/src/app.scss
+++ b/lab2/src/app.scss
@@ -46,64 +46,83 @@ body::before {
 	opacity: 0.05;
 }
 
-#svelte {
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-}
 
-h1,
-h2,
-p {
-	font-weight: 400;
-	color: var(--heading-color);
-}
 
-p {
-	line-height: 1.5;
-}
-
-a {
-	color: var(--accent-color);
-	text-decoration: none;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-h1 {
-	font-size: 2rem;
-	text-align: center;
-}
-
-h2 {
-	font-size: 1rem;
-}
-
-pre {
-	font-size: 16px;
-	font-family: var(--font-mono);
-	background-color: rgba(255, 255, 255, 0.45);
-	border-radius: 3px;
-	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
-	padding: 0.5em;
-	overflow-x: auto;
-	color: var(--text-color);
-}
-
-input,
-button {
-	font-size: inherit;
-	font-family: inherit;
-}
-
-button:focus:not(:focus-visible) {
-	outline: none;
-}
 
 @media (min-width: 720px) {
 	h1 {
 		font-size: 2.4rem;
+	}
+}
+
+#svelte{
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	section {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		flex: 1;
+	}
+
+	.welcome {
+		position: relative;
+		width: 100%;
+		height: 0;
+		padding: 0 0 calc(100% * 495 / 2048) 0;
+	}
+
+	.welcome img {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		display: block;
+	}
+	form {
+		text-align: center;
+		input, textarea{
+			display: block;
+			width: 100%;
+			margin-bottom: 10px;
+			font-family: inherit;
+			font-size: inherit;
+		}
+		p {
+			font-weight: 600;
+			text-transform: uppercase;
+			line-height: 1.5;
+		}
+		button{
+			padding: 5px 10px;
+		}
+	}
+	h1 {
+		font-size: 2rem;
+	}
+	h1,
+	p {
+		color: var(--heading-color);
+	}
+	.spinner {
+		background-color: #edf0f8;
+		border: 8px solid #f3f3f3; /* Light grey */
+		border-top: 8px solid #3498db; /* Blue */
+		border-radius: 50%;
+		width: 60px;
+		height: 60px;
+		animation: spin 2s linear infinite;
+		margin: 0 auto 10px auto;
+	}
+
+	@keyframes spin {
+		0% {
+			transform: rotate(0deg);
+		}
+		100% {
+			transform: rotate(360deg);
+		}
 	}
 }
