--- a/src/app.scss
+++ b/src/app.scss
@@ -1,30 +1,28 @@
-/* Write your global styles here, in SCSS syntax. Variables and mixins from the src/variables.scss file are available here without importing */
-
-@import '@fontsource/fira-mono';
+@import "@fontsource/fira-mono";
 
 :root {
   font-family:
     Arial,
     -apple-system,
     BlinkMacSystemFont,
-    'Segoe UI',
+    "Segoe UI",
     Roboto,
     Oxygen,
     Ubuntu,
     Cantarell,
-    'Open Sans',
-    'Helvetica Neue',
+    "Open Sans",
+    "Helvetica Neue",
     sans-serif;
 
-  --font-mono: 'Fira Mono', monospace;
+  --font-mono: "Fira Mono", monospace;
   --pure-white: #fff;
   --primary-color: #b9c6d2;
   --secondary-color: #d0dde9;
   --tertiary-color: #edf0f8;
   --accent-color: #ff3e00;
-  --heading-color: rgba(0, 0, 0, 0.7);
+  --heading-color: rgb(0 0 0 / 70%);
   --text-color: #444;
-  --background-without-opacity: rgba(255, 255, 255, 0.7);
+  --background-without-opacity: rgb(255 255 255 / 70%);
   --column-width: 42rem;
   --column-margin-top: 4rem;
 }
@@ -42,7 +40,7 @@ body {
 }
 
 body::before {
-  content: '';
+  content: "";
   width: 80vw;
   height: 100vh;
   position: absolute;
@@ -53,9 +51,9 @@ body::before {
     radial-gradient(
       50% 50% at 50% 50%,
       var(--pure-white) 0%,
-      rgba(255, 255, 255, 0) 100%
+      rgb(255 255 255 / 0%) 100%
     );
-  opacity: 0.05;
+  opacity: 5%;
 }
 
 @media (min-width: 720px) {
@@ -132,7 +130,7 @@ body::before {
     width: 60px;
     height: 60px;
     animation: spin 2s linear infinite;
-    margin: 0 auto 10px auto;
+    margin: 0 auto 10px;
   }
 
   @keyframes spin {
