--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,3 @@
-@import "@fontsource/fira-mono";
 
 :root {
   font-family:
@@ -14,7 +13,6 @@
     "Helvetica Neue",
     sans-serif;
 
-  --font-mono: "Fira Mono", monospace;
   --pure-white: #fff;
   --primary-color: #b9c6d2;
   --secondary-color: #d0dde9;
@@ -75,23 +73,9 @@ body::before {
     flex: 1;
   }
 
-  .welcome {
-    position: relative;
-    width: 100%;
-    height: 0;
-    padding: 0 0 calc(100% * 495 / 2048) 0;
-  }
-
-  .welcome img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    display: block;
-  }
-
   h1 {
     font-size: 2rem;
+    margin-top: 0;
   }
 
   h1,
@@ -109,6 +93,10 @@ body::before {
       margin-bottom: 10px;
       font-family: inherit;
       font-size: inherit;
+    }
+
+    textarea {
+      resize: none;
     }
 
     p {
