--- a/lab2/src/app.scss
+++ b/lab2/src/app.scss
@@ -1,6 +1,4 @@
 :root {
-  
-
   --pure-white: #fff;
   --primary-color: #b9c6d2;
   --secondary-color: #d0dde9;
@@ -16,41 +14,29 @@
 body {
   min-height: 100vh;
   margin: 0;
-  background:
-    linear-gradient(
-      180deg,
-      var(--primary-color) 0%,
-      var(--secondary-color) 10.45%,
-      var(--tertiary-color) 41.35%
-    );
-    font-family:
-    Arial,
-    -apple-system,
-    BlinkMacSystemFont,
-    "Segoe UI",
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    "Open Sans",
-    "Helvetica Neue",
-    sans-serif;
+  background: linear-gradient(
+    180deg,
+    var(--primary-color) 0%,
+    var(--secondary-color) 10.45%,
+    var(--tertiary-color) 41.35%
+  );
+  font-family: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body::before {
-  content: "";
+  content: '';
   width: 80vw;
   height: 100vh;
   position: absolute;
   top: 0;
   left: 10vw;
   z-index: -1;
-  background:
-    radial-gradient(
-      50% 50% at 50% 50%,
-      var(--pure-white) 0%,
-      rgb(255 255 255 / 0%) 100%
-    );
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    var(--pure-white) 0%,
+    rgb(255 255 255 / 0%) 100%
+  );
   opacity: 5%;
 }
 
