--- a/lab3/src/app.scss
+++ b/lab3/src/app.scss
@@ -1,7 +1,14 @@
+$bg-color: #3d3d3d;
+$font-color: #fff;
+$font-family: 'Fira Mono', sans-serif;
+
+html, body{
+  height: 100%;
+}
+
 body {
-  min-height: 100vh;
   margin: 0;
-  background-color: #3d3d3d;
-  color: white;
-  font-family: 'Fira Mono', sans-serif;
+  background-color: $bg-color;
+  color: $font-color;
+  font-family: $font-family;
 }
